--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
