--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.yandex.android:maps.mobile:4.3.1-full'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 }
